gtkpod V0.81-CVS
	BUGFIX: handling of orphaned tracks that had been added to the
	ipod again are now handled correctly.

	BUGFIX: fixed case-sensitivity issue while handling orphaned
	tracks.

	IMPROVEMENT: Added "Time Created" support to special sorttab,
	track display and iTunesDB. (Before only "modified" and
	"played" were supported.)

	IMPROVEMENT: All information stored in the iTunesDB about
	tracks is read and written, even if the information itself is
	not used by gtkpod itself.

	IMPROVEMENT: Added new track information fields: iPod_Path,
	creation time, soundcheck, samplerate, "BPM"

	IMPROVEMENT: Volume normalizing: when importing mp3 the replay
	gain is read and the soundcheck field set accordingly. Use
	the "soundcheck" feature of the iPod to have the volume
	normalized during playback.
	If no replay gain tag is set, use the "Normalize" as usual to
	have mp3gain write a replay gain tag.

gtkpod V0.80-2
	BUGFIX: gtkpod would crash right after startup if the info
	window was open when stopping gtkpod the previous time.

	BUGFIX: Fixed free space display: the digits were right, the
	unit was wrong (B instead of kB, kB instead of MB, MB instead
	of GB...).

	PATCH: gtkpod will compile with GTK V2.0 (V0.80 needed GTK
	V2.4)

	PATCH: gtkpod should compile under Fedora without patch

	PATCH: reverted to old-style check of id3tag-lib as id3tag.pc
	is not included with the id3tag distribution by default
	
gtkpod V0.80
	NEW FEATURE: Added support for WAV audio files

	NEW FEATURE: Added support for bookmarkable AAC files (.m4b
	files). Thanks to D.L. Sharp. More information is available at
	http://www.ipodlounge.com/articles_more.php?id=3233_0_8_0_C
	http://docs.info.apple.com/article.html?artnum=61695

	NEW FEATURE: Added support for syncing contacts and calendar from
	existing applications to the iPod (on iTunesDB export and/or via
	the Tools-menu). The sync is done by calling external scripts.
	Only one script is included so far: kaddressbook_ipod. Please